quick fixes to various layout bugs and console warnings

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
   color: #61dafb;
 }
 .Keys {
-  position: relative;
+  /* position: relative; */
   display: inline-block;
   height:160px;
   padding: 20px;
@@ -75,3 +75,9 @@
   color: white;
 }
 
+.Controls {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding-left: 10px;
+}
